--- a/test.html
+++ b/test.html
@@ -1,40 +1,108 @@
-<body></body>
+<body>
+    <select multiple>
+        <option>ok whatever</option>
+        <option id="optionZOR">ok whatever3</option>
+        <option>ok whatever2</option>
+    </select>
+    <div id="a">A div</div>
+    <div id="b">B div</div>
+    <textarea id='t'></textarea>
+</body>
 <script src="blocks.umd.js"></script>
+<script src="src/external/syn.js"></script>
 
 <script>
 
-var hiWords = "Hi"
-var toggleButton = blocks.Button(hiWords)
-toggleButton.on('click', function() {
-    if(toggleButton.text === hiWords) {
-        toggleButton.text = "RAWRR!!!"
-    } else {
-        toggleButton.text = hiWords
-    }
-})
-
-blocks.attach(toggleButton)     // append it to the document body
-
-toggleButton.style = blocks.Style({
-    color: 'rgb(128, 0, 0)',
-    marginRight: 34
-})
-
-var NameInput = function() {
-    blocks.Block.init.call(this)
-}
-var Intermediate = function(){}
-Intermediate.prototype = blocks.Block.prototype
-NameInput.prototype = new Intermediate()
-NameInput.prototype.name = 'NameInput'
-NameInput.prototype.create = function() {
-    var nameField
-    this.add(blocks.Text("Your Name: "), nameField = blocks.TextField())
-    nameField.on('keyup', function() {
-        toggleButton.text = hiWords = "Hi "+nameField.val
+    var a = document.getElementById("a")
+    var b = document.getElementById("b")
+    a.addEventListener("mouseover", function() {
+        console.log("enter")
     })
-}
 
-blocks.attach(new NameInput())
+    var hiWords = "Hi"
+    var toggleButton = blocks.Button(hiWords)
+    toggleButton.on('click', function() {
+        if(toggleButton.text === hiWords) {
+            toggleButton.text = "RAWRR!!!"
+        } else {
+            toggleButton.text = hiWords
+        }
+    })
+
+    blocks.attach(toggleButton)     // append it to the document body
+
+    toggleButton.style = blocks.Style({
+        color: 'rgb(128, 0, 0)',
+        marginRight: 34
+    })
+
+    var NameInput = function() {
+        blocks.Container.init.call(this)
+    }
+    var Intermediate = function(){}
+    Intermediate.prototype = blocks.Container.prototype
+    NameInput.prototype = new Intermediate()
+    NameInput.prototype.name = 'NameInput'
+    NameInput.prototype.create = function() {
+        var nameField
+        this.add(blocks.Text("Your Name: "), nameField = blocks.TextField())
+        nameField.on('keyup', function() {
+            toggleButton.text = hiWords = "Hi "+nameField.val
+        })
+    }
+
+    blocks.attach(new NameInput())
+
+    var group = blocks.Radio(true)
+    blocks.attach(group.button('a'), group.button('b'), group.button('c'))
+
+    var group2 = blocks.Radio(false)
+    blocks.attach(group2.button('a'), group2.button('b'))
+
+
+    var select1 = blocks.MultiSelect({"moo":"MOOOOO", "ya":"Whategver i dont care", "FUCK": "GO FUCK YOURSLF CHROME"})
+    blocks.attach(select1)
+
+    /*
+    syn.click(select1.children[0].domNode, function() {
+        console.log("donezo")
+    })
+    //*/
+
+    //*
+
+    syn.click(select1.children[1].domNode)
+
+    syn.type(select1.children[0].domNode, "[shift]")
+    //syn.click(select1.children[0].domNode)
+    syn.type(select1.children[0].domNode, "[shift-up]", function() {
+        console.log("donezo")
+    })
+
+
+
+
+    var container = blocks.Container()
+    document.body.appendChild(container.domNode)
+    var obj = blocks.TextArea()
+    container.add(obj)
+
+    syn.click(obj.domNode, function() {
+        syn.type(obj.domNode, "second", function() {
+            console.log("The value: "+obj.domNode.value)
+            obj.domNode.blur()
+        })
+    })
+
+
+    var optionzor = document.getElementById("optionZOR")
+    optionzor.innerText = "mooo"
+    console.log("optionzor text: "+optionzor.innerText)
+    console.log("optionzor text2: "+optionzor.textContent)
+
+
+
+
+    //*/
 
 </script>
