--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     </select>
     <div id="a">A div</div>
     <div id="b">B div</div>
-    <textarea id='t'></textarea>
+    <textarea id='t'>muhfucker</textarea>
 </body>
 <script src="blocks.umd.js"></script>
 <script src="src/external/syn.js"></script>
@@ -100,6 +100,8 @@
     console.log("optionzor text: "+optionzor.innerText)
     console.log("optionzor text2: "+optionzor.textContent)
 
+    var t = document.getElementById("t")
+    console.log("selection start: "+t.selectionStart)
 
 
 
