--- a/src/test/blocks.tests.html
+++ b/src/test/blocks.tests.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html><html>
 <head></head>
 <body><div id='warning'>If this screen is just blank, you should probably start the test server and load the tests at localhost:8100</div>
+<h2 id="manualDemoTitle">Manual Demos (verify these manually)</h2>
+<div id='manualDemos'></div>
 <h2 id="demoTitle">Demos (click to toggle)</h2>
 <div id='demos'></div>
 <div id='results'></div>
