--- a/src/test/blocks.tests.html
+++ b/src/test/blocks.tests.html
@@ -17,7 +17,7 @@
 <!--<script src="/blocks.umd.js"></script> Currently, these are being bundled into blocksTests.umd.js-->
 <script src="/src/external/syn.js"></script>
 
-<script src="/src/test/blocksTests.umd.js"></script>
+<script src="/src/test/generated/blocksTests.umd.js"></script>
 
 <script>
     var demosHidden = false
